tests/errors/for-generic-iterator-trait-planned.ari
struct Cursor[T] {
  current: T,
}

impl[T] Iterator[T] for Cursor[T] {
  fn next(self) -> Option[T] {
    None<T>()
  }
}

fn main() -> i64 {
  let cursor = Cursor { current: 0 };
  for value in cursor {
    return value;
  }
  return 0;
}
